k8s/avtentikacija-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: avtentikacija-deployment
  labels:
    app: avtentikacija
spec:
  replicas: 1
  selector:
    matchLabels:
      app: avtentikacija
  template:
    metadata:
      labels:
        app: avtentikacija
        shared: "true"
    spec:
      containers:
        - name: avtentikacija
          image: jantopolovec/avtentikacija:latest
          ports:
            - containerPort: 8080
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 3600
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: avtentikacija-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: avtentikacija


---


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: avtentikacija-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: ""
      http:
        paths:
          - path: /avtentikacija(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: avtentikacija-service
                port:
                  number: 8080
          - path: /upravljanje-prostorov(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: upravljanje-prostorov-service
                port:
                  number: 8080
          - path: /upravljanje-dogodkov(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: upravljanje-dogodkov-service
                port:
                  number: 8080
